Major edits of System ID chapter up to before Implementation section

--- a/bibtex/manual.bib
+++ b/bibtex/manual.bib
@@ -853,7 +853,7 @@ title = {{Adaptive control of a quadrotor UAV transporting a cable-suspended loa
 year = {2014}
 }
 @inproceedings{Bisgaard2008,
-abstract = {This paper presents a feedforward swing reducing control system for augmenting already existing helicopter controllers and enables slung load flight with autonomous helicopters for general cargo transport. The feedforward controller is designed to avoid excitation of the lightly damped modes of the system by shaping the reference trajectory using robust input shaping. It is developed together with a slung load state estimator capable of estimating the slung load swing frequency. This means that the control system can adapt to an unknown wire length for the slung load. Simulations and flight tests show the effectiveness of the input shaping applied to a small scale autonomous helicopter slung load system. Both simulations and flight verifications shows significant slung load swing reduction using the proposed trajectory shaping over flight without. Indeed it is shown how the system is capable of performing almost completely swing free maneuvers using the designed input shaper. {\textcopyright} 2008 by the American Institute of Aeronautics and Astronautics, Inc.},
+abstract = {This paper presents a feedforward swing reducing control system for augmenting already existing helicopter controllers and enables slung load flight with autonomous helicopters for general cargo transport. The feedforward controller is designed to avoid excitation of the lightly damped modes of the system by shaping the reference trajectory using robust input shaping. It is developed together with a slung load state estimator capable of estimating the slung load swing frequency. This means that the control system can adapt to an unknown wire length for the slung load. Simulations and flight tests show the effectiveness of the input shaping applied to a small scale autonomous helicopter slung load system. Both simulations and flight verifications shows significant slung load swing reduction using the proposed trajectory shaping over flight without. Indeed it is shown how the system is capable of performing almost completely swing-free maneuvers using the designed input shaper. {\textcopyright} 2008 by the American Institute of Aeronautics and Astronautics, Inc.},
 author = {Bisgaard, Morten and {La Cour-Harbo}, Anders and Bendtsen, Jan Dimon},
 booktitle = {AIAA Guidance, Navigation and Control Conference and Exhibit},
 doi = {10.2514/6.2008-6964},
