--- a/control/mpc.tex
+++ b/control/mpc.tex
@@ -21,7 +21,7 @@
     In many implementations, only the first control action of the optimal sequence is executed and the optimisation is re-calculated at every time-step.
 
     \paragraph
-    Each specific \gls{MPC} implementation is dependant on the plant model representation \cite{Garcia1989}.
+    Each \gls{MPC} implementation depends on the plant model representation \cite{Garcia1989}.
     In this section, an overview will be given of the specific \gls{MPC} implementation used in this work.
     The \gls{MPC} objective function will be explained and the design process to tune the controller will be discussed.
     It will also be discussed how integral action is achieved with the \gls{MPC}.
