--- a/glossary.tex
+++ b/glossary.tex
@@ -22,7 +22,7 @@
 \newacronym{DMDc}{DMDc}{Dynamic Mode Decomposition with Control}
 \newacronym{HAVOK}{HAVOK}{Hankel Alternative View Of Koopman}
 \newacronym{HAVOKc}{HAVOKc}{Hankel Alternative View Of Koopman with Control}
-\newacronym{SINDy}{SINDy}{Sparse Identification of non-linear Dynamics}
+\newacronym{SINDy}{SINDy}{Sparse Identification of Non-linear Dynamics}
 
 \newacronym{RLS}{RLS}{Recursive Least Squares}
 \newacronym{FFT}{FFT}{Fast Fourier Transform}
