--- a/modelling/modelling.tex
+++ b/modelling/modelling.tex
@@ -385,7 +385,7 @@ Finally, practical flight data will be used to verify the simulated mathematical
 
     \paragraph
     \textbf{Suspended payload} \newline
-    The suspended payload applies a reaction force, $\bm{F}_\mathcal{B}^P$, and moment, $\bm{M}_\mathcal{B}^P$, to the multirotor which is dependant on the dynamics of the suspended payload.
+    The suspended payload applies a reaction force, $\bm{F}_\mathcal{B}^P$, and moment, $\bm{M}_\mathcal{B}^P$, to the multirotor which depends on the dynamics of the suspended payload.
     The payload and cable also experience gravity and aerodynamic forces which influence its motion.
     These forces and moments are considered in greater detail in the next section.
     
