--- a/results/results.tex
+++ b/results/results.tex
@@ -528,7 +528,7 @@
 
             \paragraph
             Figure~\ref{fig:HITL_mpc_theta} shows the payload angle data of the \gls{PID} and \gls{MPC} controllers during the velocity step response.
-            From this plot, it is visible that the \gls{MPC} controller damps the payload angle well.
+            From this plot, it can be seen that the \gls{MPC} controller damps the payload angle well.
             Overall, these plots show that the swing-damping control achieved in simulations in Section~\ref{sec:mpc}, is also achievable with the final controller software running on the actual hardware.
 
             % ?? Discuss practical feasibility as in intro
