--- a/system_id/dmdc.tex
+++ b/system_id/dmdc.tex
@@ -43,7 +43,7 @@
     taken at regular intervals of $\Delta t = T_s$, during a simulated flight with Cascaded \gls{PID} control.
     In a practical flight, these time-series measurements need to be saved in memory because it is processed as a single batch by \gls{DMD}.
     Note that \gls{DMD} can be applied in a recursive manner as described in \cite{Noack2016}.
-    However this implementation is not considered because an \gls{OBC} with significant memory size can be used.
+    However, this implementation is not considered because an \gls{OBC} with significant memory size can be used.
     
     \paragraph
     The training data is collected into the following matrices:
