--- a/system_id/havok.tex
+++ b/system_id/havok.tex
@@ -154,7 +154,7 @@
     \end{figure}
 
     \paragraph
-    For a high-level comparison of the data-driven methods, recall from Section~\ref{sec:dmdc} that \gls{DMDc} applies least-squares regression directly to the collected state and input data matrices.
+    For a high-level comparison of the data-driven methods, recall that \gls{DMDc} applies least-squares regression directly to the collected state and input data matrices from Section~\ref{sec:dmdc}.
     \gls{HAVOKc} first applies an \gls{SVD} to the state and input data, and truncates the insignificant modes.
     Least-squares regression is then applied to the pseudo-state data from the truncated \gls{SVD} to determine a state-space model.
     This model is then transformed back into the original coordinate frame.
