--- a/conclusion/conclusion.tex
+++ b/conclusion/conclusion.tex
@@ -101,7 +101,7 @@
         Numerous tests were performed to evaluate the combined system identification and control architectures.
         For each test, the system identification stages firstly produced the parameter estimates and identified model for the \gls{LQR} and \gls{MPC} approaches respectively.
         Thereafter, each controller was applied based on those results.
-        For a payload with a simple pendulum model, the \gls{LQR} and \gls{MPC} both achieved stabilised control resulting in near swing free motion.
+        For a payload with a simple pendulum model, the \gls{LQR} and \gls{MPC} both achieved stabilised control resulting in near swing-free motion.
         The controllers showed similar swing damping performances, but the \gls{MPC} produced a faster settling time.
         The control architectures consistently achieved swing damping control with different payload masses and cable lengths, despite parameter uncertainty for the \gls{LQR} approach and no prior payload knowledge for the \gls{MPC} approach.
         Both controllers also showed acceptable disturbance rejection during a constant unknown step input force to the multirotor.
