--- a/frontmatter/uittreksel.tex
+++ b/frontmatter/uittreksel.tex
@@ -2,6 +2,40 @@
 % \addcontentsline{toc}{chapter}{Uittreksel}
 \makeatletter\@mkboth{}{Uittreksel}\makeatother
 
-% ?? translate into Afrikaans abstract
+\vspace{-5mm}
+
+\paragraph
+Hierdie tesis hanteer die probleem van gestabiliseerde beheer vir 'n multirotor hommeltuig met 'n onbekende hangende loonvrag.
+Die beheerder veronderstel geen voorafkennis van die loonvragdinamika nie.
+Die swaaiende loonvrag be\"invloed die multirotor-vlugdinamika negatief deur ossillasies in die stelsel te veroorsaak.
+'n Aanpasbare beheerargitektuur word voorgestel om hierdie ossillasies te demp en \'n stabiele vlug met verskillende onbekende loonvragte te verskaf.
+’n Datagedrewe stelsel-identifikasiemetode vorm deel van die argitektuur en word in simulasie en met praktiese vlugdata gedemonstreer.
+\gls{MPC} word toegepas vir swaaidempingsbeheer en word geverifieer met \gls{HITL}-simulasies.
+
+\paragraph
+'n Parameterberamer en \gls{LQR} word in die basislynargitektuur gebruik.
+Die \gls{LQR} gebruik 'n voorafbepaalde model van die loonvrag, wat voltooi word met skattings van die loonvragmassa en kabellengte.
+Die argitektuur wat in hierdie werk voorgestel word, gebruik \gls{DMDc} om 'n line\^ere toestand-ruimte model te skat en die onbekende dinamika te benader.
+'n Kort lengte van vlugdata word vir opleiding gebruik.
+'n \gls{MPC} gebruik die data-gedrewe model om die multirotor te beheer en die loonvrag ossillasies te demp.
+
+% ?? Last paragraph from english to afrikaans
+% ?? Afrikaans acronymns
+
+\paragraph 
+A Simulink\texttrademark~simulator was designed and verified with practical data.
+Within simulations, both the baseline and proposed architectures produced near swing-free multirotor control with different payload masses and cable lengths.
+Even with a dynamic payload producing irregular oscillations, both methods resulted in stabilised control.
+Both architectures also showed effective disturbance rejection.
+Despite the baseline method using an accurate predetermined model, the proposed method produced equal performances without prior knowledge of the dynamics.
+The baseline performance degraded significantly for a different multirotor mass because this parameter was not considered as an unknown.
+In contrast, the proposed method consistently produced good performances. 
+
+\paragraph
+Die akkuraatheid van die \gls{DMDc} modelle is geverifieer met praktiese vlugdata.
+Die voorgestelde beheerargitektuur is ook in \gls{HITL}-simulasies gedemonstreer.
+Die hardeware het die \gls{MPC} teen die verlangde spoed uitgevoer, wat byna swaaivrye beheer in 'n Gazebo-simulator gelewer het.
+Oor die algemeen is aangetoon dat die voorgestelde beheerargitektuur prakties uitvoerbaar is.
+Sonder kennis van die loonvragdinamika word 'n data-gedrewe model met \gls{MPC} gebruik vir effektiewe swaaidempingsbeheer met 'n multirotor.
 
 \glsresetall
